--- a/src/App.css
+++ b/src/App.css
@@ -11,11 +11,12 @@
   background-color: #222;
   height: 150px;
   padding: 20px;
-  color: white;
+  color: #eee;
 }
 
-.App-intro {
-  font-size: large;
+.App-content .formogen {
+  height: 100px;
+  display: grid;
 }
 
 @keyframes App-logo-spin {
