--- a/src/App.css
+++ b/src/App.css
@@ -1,25 +1,7 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: #eee;
-}
-
-.App-content .formogen {
-  height: 100px;
-  display: grid;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.formogen .files-previews {
+  max-height: 50vh;
+  height: auto;
+  overflow-x: hidden;
+  overflow-y: auto;
+  padding-right: 10px;
 }
